[package]
name = "gorps_frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = {version="0.3", features=["HtmlSelectElement"]}
gloo = "0.7"
yew = "0.19"
once_cell = "1.10"
stylist = "0.10"
